--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -417,7 +417,7 @@ jobs:
         run: |
           TAG=$(date +'%Y%m%d%H%M%S')
           echo "image_tag=$TAG" >> $GITHUB_OUTPUT
-
+         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -430,7 +430,7 @@ jobs:
       - name: Build and push Docker images
         run: |
           TAG=${{ steps.set_tag.outputs.image_tag }}
-          echo "Building images with tag: $TAG"
+          echo " Building images with tag: $TAG"
           
           for service in db api app; do
             IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/quotes-${service}"
@@ -466,9 +466,95 @@ jobs:
         run: |
           TAG=${{ steps.set_tag.outputs.image_tag }}
           
-          # Create user-data.sh here (as in your original code)
-          # ...
-          # After generating user-data.sh and replacing env variables
+          cat > user-data.sh <<'EOF'
+          #!/bin/bash
+          set -ex
+
+          LOG_FILE=/var/log/user-data.log
+
+          echo "Starting system update..." | tee -a $LOG_FILE
+          sudo apt-get update -y >> $LOG_FILE 2>&1
+          sudo apt-get upgrade -y >> $LOG_FILE 2>&1
+
+          echo "Installing docker prerequisites..." | tee -a $LOG_FILE
+          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common gnupg-agent >> $LOG_FILE 2>&1
+
+          echo "Adding Docker GPG key and repo..." | tee -a $LOG_FILE
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - >> $LOG_FILE 2>&1
+          sudo add-apt-repository \
+            "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/ubuntu \
+            $(lsb_release -cs) stable" >> $LOG_FILE 2>&1
+
+          echo "Installing Docker engine..." | tee -a $LOG_FILE
+          sudo apt-get update -y >> $LOG_FILE 2>&1
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io >> $LOG_FILE 2>&1
+          sudo systemctl enable docker >> $LOG_FILE 2>&1
+          sudo systemctl start docker >> $LOG_FILE 2>&1
+
+          echo "Installing Docker Compose v2..." | tee -a $LOG_FILE
+          sudo rm -f /usr/local/bin/docker-compose /usr/bin/docker-compose
+          sudo apt-get install -y docker-compose-plugin
+
+          echo "Installing nginx..." | tee -a $LOG_FILE
+          sudo apt-get install -y nginx >> $LOG_FILE 2>&1
+          sudo systemctl enable nginx
+          sudo systemctl start nginx
+
+          echo "Installing AWS SSM agent..." | tee -a $LOG_FILE
+          if ! command -v snap >/dev/null 2>&1 || ! snap list amazon-ssm-agent >/dev/null 2>&1; then
+            echo "Installing Amazon SSM Agent via .deb package"
+            curl "https://s3.${AWS_REGION}.amazonaws.com/amazon-ssm-${AWS_REGION}/latest/debian_amd64/amazon-ssm-agent.deb" -o "amazon-ssm-agent.deb"
+            sudo dpkg -i amazon-ssm-agent.deb || sudo apt-get install -f -y
+            sudo systemctl enable amazon-ssm-agent
+            sudo systemctl start amazon-ssm-agent
+          else
+            echo "Amazon SSM Agent already installed via snap, skipping .deb install"
+            sudo systemctl enable snap.amazon-ssm-agent.amazon-ssm-agent.service
+            sudo systemctl start snap.amazon-ssm-agent.amazon-ssm-agent.service
+          fi
+          
+          sudo apt-get update -y
+          sudo apt-get install -y unzip curl
+
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version
+
+          sudo usermod -aG docker ubuntu
+
+          echo "Creating app directory..." | tee -a $LOG_FILE
+          APP_DIR=/home/ubuntu/quotes-app
+          sudo mkdir -p $APP_DIR/deployment
+          sudo chown -R ubuntu:ubuntu $APP_DIR
+          echo "App directory created at $APP_DIR" | tee -a $LOG_FILE
+
+          echo "Downloading deployment files from S3..." | tee -a $LOG_FILE
+          aws s3 cp s3://${DEPLOYMENT_BUCKET}/deployments/${TAG}/docker-compose.yml $APP_DIR/docker-compose.yml --region ${AWS_REGION} >> $LOG_FILE 2>&1
+          aws s3 cp s3://${DEPLOYMENT_BUCKET}/deployments/${TAG}/deployment/ $APP_DIR/deployment/ --recursive --region ${AWS_REGION} >> $LOG_FILE 2>&1
+          sudo aws s3 cp s3://${DEPLOYMENT_BUCKET}/deployments/${TAG}/quotes.conf /etc/nginx/conf.d/quotes.conf --region ${AWS_REGION} >> $LOG_FILE 2>&1
+
+          sudo chown -R ubuntu:ubuntu $APP_DIR
+          sudo chmod +x $APP_DIR/deployment/*.sh
+
+          echo "Deploying docker-compose app..." | tee -a $LOG_FILE
+          cd $APP_DIR
+          sudo -u ubuntu docker compose down || true >> $LOG_FILE 2>&1
+          sudo -u ubuntu docker compose pull >> $LOG_FILE 2>&1
+          sudo -u ubuntu docker compose up -d >> $LOG_FILE 2>&1
+          sudo rm -rf /etc/nginx/sites-enabled/default
+          echo "Reloading nginx..." | tee -a $LOG_FILE
+          sudo systemctl reload nginx >> $LOG_FILE 2>&1
+
+          echo "User data script completed successfully" | tee -a $LOG_FILE
+
+          EOF
+
+          sed -i "s|\${DEPLOYMENT_BUCKET}|${{ env.DEPLOYMENT_BUCKET }}|g" user-data.sh
+          sed -i "s|\${TAG}|${TAG}|g" user-data.sh
+          sed -i "s|\${AWS_REGION}|${{ env.AWS_REGION }}|g" user-data.sh
+          sed -i "s|\${DOCKER_USERNAME}|${{ secrets.DOCKER_USERNAME }}|g" user-data.sh
+          sed -i "s|\${DOCKER_PASSWORD}|${{ secrets.DOCKER_PASSWORD }}|g" user-data.sh
 
           NEW_VERSION=$(aws ec2 create-launch-template-version \
             --launch-template-id ${{ env.LAUNCH_TEMPLATE_ID }} \
@@ -522,6 +608,7 @@ jobs:
             --output text)
           echo "tg_arn=$TG_ARN" >> $GITHUB_OUTPUT
           echo "Created Target Group: $TG_ARN"
+          sleep 25
 
       - name: Create new Auto Scaling Group
         id: create_asg
@@ -540,7 +627,7 @@ jobs:
             --termination-policies "OldestInstance" \
             --tags Key=Name,Value="$ASG_NAME" Key=Environment,Value=green Key=DeploymentBatch,Value=${{ needs.build.outputs.image_tag }}
           echo "asg_name=$ASG_NAME" >> $GITHUB_OUTPUT
-
+          sleep 50
       - name: Debug create_tg output
         run: echo "TG ARN from step= ${{ steps.create_tg.outputs.tg_arn }}"
 
