--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -1327,22 +1327,21 @@ jobs:
           fi
 
           echo "Old infrastructure cleaned up successfully"
-
       - name: Update OLD_ASG_NAME secret
-        uses: peter-evans/create-or-update-secret@v1
-        with:
-          secret-name: OLD_ASG_NAME
-          secret-value: ${{ steps.create_asg.outputs.asg_name }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+        run: |
+          gh secret set OLD_ASG_NAME \
+            --body "${{ steps.create_asg.outputs.asg_name }}" \
+            --repo ${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Update OLD_TG_ARN secret
-        uses: peter-evans/create-or-update-secret@v1
-        with:
-          secret-name: OLD_TG_ARN
-          secret-value: ${{ steps.create_tg.outputs.tg_arn }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+        run: |
+          gh secret set OLD_TG_ARN \
+            --body "${{ steps.create_tg.outputs.tg_arn }}" \
+            --repo ${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Deployment Success Notification
         run: |
