--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -1134,41 +1134,24 @@ jobs:
 
       - name: Create new Auto Scaling Group
         id: create_asg
-        env:
-          LAUNCH_TEMPLATE_VERSION: ${{ steps.create_lt_version.outputs.launch_template_version }}
-          TG_ARN: ${{ steps.create_tg.outputs.tg_arn }}
-          IMAGE_TAG: ${{ steps.set_tag.outputs.image_tag }}
-          LAUNCH_TEMPLATE_ID: ${{ env.LAUNCH_TEMPLATE_ID }}
-          PRIVATE_SUBNET_IDS: ${{ secrets.PRIVATE_SUBNET_IDS }}
-          APP_NAME: ${{ env.APP_NAME }}
-          GITHUB_RUN_NUMBER: ${{ github.run_number }}
         run: |
-          ASG_NAME="asg-${GITHUB_RUN_NUMBER}-${APP_NAME}"
-
-          echo "Creating ASG $ASG_NAME with Launch Template Version: $LAUNCH_TEMPLATE_VERSION"
-
-          if [ -z "$LAUNCH_TEMPLATE_VERSION" ]; then
-            echo "ERROR: LAUNCH_TEMPLATE_VERSION is empty"
-            exit 1
-          fi
-
+          ASG_NAME="asg-${{ github.run_number }}-${{ env.APP_NAME }}"
           aws autoscaling create-auto-scaling-group \
             --auto-scaling-group-name "$ASG_NAME" \
-            --launch-template LaunchTemplateId=$LAUNCH_TEMPLATE_ID,Version=$LAUNCH_TEMPLATE_VERSION \
+            --launch-template LaunchTemplateId=${{ env.LAUNCH_TEMPLATE_ID }},Version=${{ needs.build.outputs.launch_template_version }} \
             --min-size 1 \
             --max-size 5 \
             --desired-capacity 1 \
-            --target-group-arns "$TG_ARN" \
-            --vpc-zone-identifier "$PRIVATE_SUBNET_IDS" \
+            --target-group-arns "${{ steps.create_tg.outputs.tg_arn }}" \
+            --vpc-zone-identifier "${{ secrets.PRIVATE_SUBNET_IDS }}" \
             --health-check-type ELB \
             --health-check-grace-period 300 \
             --termination-policies "OldestInstance" \
-            --tags Key=Name,Value="$ASG_NAME" Key=Environment,Value=green Key=DeploymentBatch,Value="$IMAGE_TAG"
-
+            --tags Key=Name,Value="$ASG_NAME" Key=Environment,Value=green Key=DeploymentBatch,Value=${{ needs.build.outputs.image_tag }}
           echo "asg_name=$ASG_NAME" >> $GITHUB_OUTPUT
-
-          sleep 240
-
+          sleep 50
+      - name: Debug create_tg output
+        run: echo "TG ARN from step= ${{ steps.create_tg.outputs.tg_arn }}"
 
       - name: Set initial traffic split 80% old TG, 20% new TG
         run: |
