--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -1152,7 +1152,7 @@ jobs:
             --tags '[{"Key":"Name","Value":"'"$ASG_NAME"'"},{"Key":"Environment","Value":"green"}]'
         
           echo "asg_name=$ASG_NAME" >> $GITHUB_OUTPUT
-          sleep 240
+          sleep 200
 
       - name: Debug create_tg output
         run: echo "TG ARN from step= ${{ steps.create_tg.outputs.tg_arn }}"
@@ -1283,7 +1283,7 @@ jobs:
                 exit 1
               fi
               echo " Scaling down old ASG to 1..."
-              aws autoscaling set-desired-capacity --auto-scaling-group-name "$OLD_ASG_NAME" --desired-capacity 1
+              aws autoscaling set-desired-capacity --auto-scaling-group-name "$OLD_ASG_NAME" --desired-capacity 1   --region ap-south-1
               echo " Deployment complete!"
               break
             fi
